# peeky_reachy

./: .gitignore  PLAN.md  README.md  ROBUSTNESS.md  app.py  pyproject.toml  requirements.txt  standup.md  status.md
assets/reachy_mini/: ATTRIBUTION.md
cry_service/: Dockerfile  README.md  classifier_wrap.py  requirements.txt  server.py
gemma_service/: Dockerfile  README.md  __init__.py  gemmawrap.py  requirements.txt  server.py
gpu_service/: Dockerfile  README.md  __init__.py  requirements.txt  server.py  voxwrap.py
ops/: infra.md  models.md  peeky-cry-turing.service  peeky-cry.service  peeky-voice.service  requirements.cry.lock.txt
peeky_reachy/: __init__.py  app.py  cli.py  config.py  pipeline.py  reachy3d.py  streaming.py  webapp.py
peeky_reachy/audio/: io.py
peeky_reachy/detect/: classifier.py  ensemble.py  events.py  gemma_reason.py  preprocess.py  reason.py  remote_classifier.py  smoothing.py  vad.py
peeky_reachy/generate/: __init__.py  backends.py  lullaby.py  safety.py  speak.py  story.py  webtab.py
peeky_reachy/soothe/: controller.py  motion.py  responses.py
peeky_reachy/voice/: clone_client.py  (+2 more)
tests/: conftest.py  test_controller.py  test_cry_service.py  test_enroll.py  test_gemma_reason.py  test_gemma_service.py  test_generate_lullaby.py  test_generate_story.py  test_gpu_service.py  test_hf_space.py  test_pipeline.py  test_reachy3d_urdf.py  test_reason.py  test_remote_classifier.py  test_remote_integration.py  test_signal_detection.py  test_smoothing.py  test_voice_clone.py  test_webapp.py  test_webapp_edges.py  test_webapp_live.py
